# Fast-API

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  pylint.yml
app/: auth.py  database.py  exceptions.py  main.py  middleware.py
app/crud/: __init__.py  item.py
app/models/: __init__.py  item.py  user.py
app/routers/: auth.py  items.py
app/schemas/: __init__.py  item.py  user.py
tests/: conftest.py  test_auth.py  test_items.py  test_main.py
